# JUCEBuildRepo

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.in  README.md
Plugins/: CMakeLists.txt
Plugins/AudioProcessingPlugin/: CMakeLists.txt
Plugins/AudioProcessingPlugin/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Plugins/DelayPlugin/: CMakeLists.txt
Plugins/DelayPlugin/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Plugins/NegativeHarmony/: CMakeLists.txt
Plugins/NegativeHarmony/Source/: MidiProcessor.cpp  MidiProcessor.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
